feat: :sparkles: add custom words to cSpell and log message on server start

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,29 @@
 {
   "cSpell.language": "en,es",
+  "cSpell.words": [
+    "asmt",
+    "assmt",
+    "pkassessments",
+    "pkassmt",
+    "pkconfiguration",
+    "pkcustomers",
+    "pkdomain",
+    "pkhr",
+    "pkkg",
+    "pkknowledge",
+    "pklevels",
+    "pkpm",
+    "pkprofessionals",
+    "pkprojects",
+    "pkrating",
+    "pkrole",
+    "pkroles",
+    "pksec",
+    "pktech",
+    "pktechnology",
+    "pkuser",
+    "pkusers",
+    "puntaje",
+    "Puntaje"
+  ],
 }
