docs: :construction: añade descripciones de propiedades API en DTOs y entidades, mejorando la documentación de los modelos en la API

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "antares",
     "asmt",
     "assmt",
+    "GPFVV",
     "Knowledges",
     "pkassessments",
     "pkassmt",
@@ -29,6 +30,7 @@
     "postgres",
     "puntaje",
     "Puntaje",
+    "RTHH",
     "typeorm"
   ],
 }
