--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "true",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "name": "antares",
+  "version": "1.0.0-alpha",
+  "description": "ANTARES - Assessment Network for Technical Aptitude and Resource Evaluation System.",
+  "author": "Julian Andres Lasso Figueroa <julian.lasso@sofka.com.co>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -39,11 +39,11 @@
     "@nestjs/testing": "^10.4.4",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
-    "@types/node": "^20.16.9",
+    "@types/node": "^20.16.10",
     "@types/supertest": "^6.0.2",
-    "@typescript-eslint/eslint-plugin": "^8.7.0",
-    "@typescript-eslint/parser": "^8.7.0",
-    "eslint": "^9.11.1",
+    "@typescript-eslint/eslint-plugin": "^8.8.1",
+    "@typescript-eslint/parser": "^8.8.1",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
